# gravitysandbox

./: CMakeLists.txt  README.md  build-web.sh  run.sh
.github/workflows/: build-desktop.yml  deploy-web.yml
cmake/: raylib-web-hidpi.patch
src/: body.h  curvature.cpp  curvature.h  main.cpp  patterns.cpp  patterns.h  physics.cpp  physics.h  ui.cpp  ui.h
web/: shell.html
